--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -10,5 +10,7 @@
 %dl
   %dt=User.human_attribute_name(:name)
   %dd=@user.name
+  %dt=User.human_attribute_name(:phone)
+  %dd=@user.phone
   %dt=User.human_attribute_name(:role)
   %dd=@user.role_name
