--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -7,6 +7,9 @@
     = f.label :email
     = f.email_field :email, class: 'form-control'
   .form-group
+    = f.label :phone
+    = f.text_field :phone, class: 'form-control', data: {masked: 'number'}, value:(@user.phone if @user.phone)
+  .form-group
     = f.label :password
     = f.password_field :password, class: 'form-control'
   .form-group
