--- a/app/views/films/index.html.haml
+++ b/app/views/films/index.html.haml
@@ -8,6 +8,13 @@
 -if @films.blank?
   .alert.alert-info Фильмов не найдено
 -else
+
+  = form_tag(search_index_path, :method => "get", id: "search-form") do
+    .form-group
+      .input-group
+        = text_field_tag :search, params[:search], placeholder: "Поиск", class: 'form-control'
+        .input-group-btn
+          = submit_tag 'Поиск', class: 'btn btn-primary'
   .list-group
     =render @films
-  =paginate @films  
+  =paginate @films
