--- a/app/views/people/_person.html.haml
+++ b/app/views/people/_person.html.haml
@@ -1,6 +1,15 @@
-=link_to person, class: 'list-group-item' do
+-# =link_to person, class: 'list-group-item' do
+-#   .media
+-#     -if person.avatar?
+-#       .media-left=image_tag person.avatar.url(:thumb), alt: person.name, class: 'media-object'
+-#     .media-body
+-#       %h4.media-heading=person.name
+.list-group-item
   .media
     -if person.avatar?
       .media-left=image_tag person.avatar.url(:thumb), alt: person.name, class: 'media-object'
     .media-body
       %h4.media-heading=person.name
+      -if person.adres
+        %a{:href => person.adres, :target => "_blank"}
+          Официальная страница
