--- a/app/views/countries/_form.html.haml
+++ b/app/views/countries/_form.html.haml
@@ -4,5 +4,8 @@
   .form-group
     = f.label :name
     = f.text_field :name, class: 'form-control'
+  .form-group
+    = f.label :square
+    = f.text_field :square, class: 'form-control'
   .actions
     = f.submit nil, class: 'btn btn-primary'
