--- a/app/views/countries/index.html.haml
+++ b/app/views/countries/index.html.haml
@@ -9,6 +9,10 @@
   -Country::CHARS.each do |i|
     %li
       =link_to i[0], countrysearch_index_path(search: i[0]), data: {method: :get}
+%ul.nav.pagination
+  %li=link_to '↑', countries_path(sort: 0), data: {method: :get}
+  %li=link_to '↓', countries_path(sort: 1), data: {method: :get}
+  
 .list-group
   -@countries.each do |country|
     =link_to country.name,country, class: 'list-group-item'
