--- a/app/views/countries/show.html.haml
+++ b/app/views/countries/show.html.haml
@@ -1,5 +1,9 @@
 .page-header
   %h1=@country.name
+.text-muted
+  =Country.human_attribute_name(:square)
+  =@country.square
+  кв. км
 =render 'menu'
 -if @films.blank?
   .alert.alert-info Фильмов не найдено
