--- a/app/views/application/_topbar.html.haml
+++ b/app/views/application/_topbar.html.haml
@@ -13,6 +13,8 @@
         %li=link_to 'Страны', countries_path
         -if User.edit_by?(@current_user)
           %li=link_to 'Пользователи', users_path
+        -elsif @current_user != nil
+          %li=link_to 'Избранное', favorite_index_path
 
       %ul.nav.navbar-nav.navbar-right
         -if @current_user
